--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "css-skeletons",
   "version": "1.0.4",
   "description": "",
-  "main": "./css/css-skeletons.min.css",
+  "main": "./dist/css-skeletons.min.css",
   "scripts": {
-    "deploy": "gh-pages -d demo"
+    "deploy": "gh-pages -d demo",
+    "format": "prettier --write '**/*.{js,md,html}'"
   },
   "keywords": [
     "css content placeholder",
@@ -13,18 +14,17 @@
     "css loading"
   ],
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "prettier": "^2.1.2"
+    "gh-pages": "^4.0.0",
+    "gulp": "^4.0.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "node-sass": "^7.0.1",
+    "prettier": "^2.7.1"
   },
   "author": "Doğukan Çavuş",
-  "email" : "dgknca@gmail.com",
+  "email": "dgknca@gmail.com",
   "license": "MIT",
   "repository": {
     "type": "git",
