--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/css-skeletons.min.css",
   "scripts": {
     "deploy": "gh-pages -d demo",
-    "format": "prettier --write '**/*.{js,md,html}'"
+    "format": "prettier --write '**/*.{md,html}'"
   },
   "keywords": [
     "css content placeholder",
