--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "css-skeletons",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "./dist/css-skeletons.min.css",
   "scripts": {
@@ -15,7 +15,7 @@
   "devDependencies": {
     "gh-pages": "^4.0.0",
     "gulp": "^4.0.2",
-    "gulp-cssnano": "^2.1.3",
+    "gulp-clean-css": "^4.3.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
